--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FinTrack</string>
+    <string name="intro_message">The Best App to\nmanage your\nmoney</string>
+    <string name="get_started">Get Started</string>
 </resources>
